--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,10 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     // Room components
+    implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
-    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+    implementation "androidx.room:room-paging:$roomVersion"
 
     //Dagger, Hilt
     def hilt_version = "2.44"
